# storage/api-docs/api-docs.json
@@ -26,9 +26,6 @@
                 },
                 "security": [
                     {
-                        "apiKey": []
-                    },
-                    {
                         "iaeKey": []
                     }
                 ]
@@ -55,9 +52,6 @@
                     }
                 },
                 "security": [
-                    {
-                        "apiKey": []
-                    },
                     {
                         "iaeKey": []
                     }
@@ -86,9 +80,6 @@
                 },
                 "security": [
                     {
-                        "apiKey": []
-                    },
-                    {
                         "iaeKey": []
                     }
                 ]
@@ -111,9 +102,6 @@
                 },
                 "security": [
                     {
-                        "apiKey": []
-                    },
-                    {
                         "iaeKey": []
                     }
                 ]
@@ -122,11 +110,6 @@
     },
     "components": {
         "securitySchemes": {
-            "apiKey": {
-                "type": "apiKey",
-                "name": "X-API-KEY",
-                "in": "header"
-            },
             "iaeKey": {
                 "type": "apiKey",
                 "name": "X-IAE-KEY",
